# sample-data

./: .gitignore  Makefile  README.md  pyproject.toml
data/: Makefile  README.md
data/1867-2020/: .env  Makefile  protocols.txt  tag.sh
data/1867-2020/opts/: config_v1.4.1_v1.1.3.yml  subset-config.yml  tagger-config.yml
data/1867-2020/opts/dtm/pending/: lemma.yml
data/1867-2020/opts/tagged-speeches/pending/: tagged_frames_speeches_base.csv.yml  tagged_frames_speeches_text.csv.yml
data/1920-2020/: .env  Makefile  protocols.txt  riksprot_v0100_test
data/1file/: Makefile  protocols.txt
data/1file/opts/tagged-speeches/: tagged_frames_speeches_base.feather.yml  tagged_frames_speeches_lemma.csv.yml  tagged_frames_speeches_lemma.feather.yml
data/5files/: protocols.txt
data/5files/opts/: config_v1.6.0_v1.2.2.yml  registry-template
data/5files/registry/: riksprot_5files_v141
data/dataset-01/: .env  Makefile  protocols.txt
data/dataset-01/dehyphen_datadir/: word-frequencies.pkl
data/dataset-01/opts/: tagger-config.yml
data/dataset-01/opts/dtm/: text.yml
data/dataset-01/v0.6.0/: riksprot_metadata.db
data/dataset-01/v0.6.0/dtm/lemma/: lemma_vector_data.npz  lemma_vectorizer_data.json
data/dataset-01/v0.6.0/dtm/text/: text_vector_data.npz  text_vectorizer_data.json
data/dataset-01/v0.6.0/parlaclarin/metadata/: alias.csv  location_specifier.csv  member_of_parliament.csv  minister.csv  name.csv  name_location_specifier.csv  party_affiliation.csv  person.csv  protocols.csv  speaker.csv  speaker_notes.csv  utterances.csv
data/dataset-01/v0.6.0/registry/: riksprot_v060_test
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_base.feather/: token2id.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_base.feather/1960/: prot-1960--ak--1.feather  prot-1960-höst-ak--22.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_base.feather/1961/: prot-1961--ak--1.feather  prot-1961--fk--1.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_base.feather/1970/: prot-1970-höst-fk--45.feather  prot-1970-höst-fk--46.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_base.feather/1971/: prot-1971--1.feather  prot-1971--2.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_base.feather/198081/: prot-198081--1.feather  prot-198081--2.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_lemma.feather/: token2id.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_lemma.feather/1960/: prot-1960--ak--1.feather  prot-1960-höst-ak--22.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_lemma.feather/1961/: prot-1961--ak--1.feather  prot-1961--fk--1.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_lemma.feather/1970/: prot-1970-höst-fk--45.feather  prot-1970-höst-fk--46.feather
data/dataset-01/v0.6.0/speeches/tagged_frames_speeches_text.feather/: document_index.feather  token2id.feather
data/decade-1960/: Makefile  protocols.txt
data/decade-1960/opts/: tagger-config.yml
data/decade-1960/opts/plain-text-speeches/: text_speeches_base.yml
data/fakes/: .env  Makefile
data/random_sample_10files/: .env  Makefile  protocols.txt  sample_protocols.py
data/random_sample_10files/opts/: config_v1.6.0_v1.2.2.yml  registry-template  subset-config.yml
data/random_sample_90files/: .env  Makefile  protocols.txt  sample_protocols.py
data/random_sample_90files/opts/: tagger-config.yml
data/random_sample_90files/opts/tagged-speeches/: tagged_frames_speeches_text.feather.yml
data/resources/: partys_2024-10-17_justerad_ny.xlsx  riksprot_corpus  swedeb-parties.csv  xtra_party_abbrev.csv
src/: trends-demo.ipynb
src/parlaclarin/: __paths__.py  speech_text.py  trends_data.py
tests/: cwb_test.py  test_speech_index.py  test_trends.py
(+14 files in other folders)
