[tool.poetry]
name = "swedeb-sample-data"
version = "0.1.0"
description = "Sample test data for Swe-DEB"
authors = ["roger-mahler <roger.mahler@hotmail.com>"]
readme = "README.md"
packages = [{include = "data"}]
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Software Development',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
pyriksprot-tagger = {path = "../../welfare-state-analytics/pyriksprot_tagger", develop = true}
pyriksprot = "^2023.4.4"
cwb-ccc = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
