[tool.poetry]
name = "swedeb-sample-data"
version = "2023.12.1"
description = "Sample test data for Swe-DEB"
authors = ["roger-mahler <roger.mahler@hotmail.com>"]
readme = "README.md"
packages = [{include = "data"}]
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Topic :: Software Development',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "==3.11.*"
# pyriksprot-tagger = {path = "../../welfare-state-analytics/pyriksprot_tagger", develop = true}
pyriksprot = "^2023.4.7"
cwb-ccc = "*"
humlab-penelope = "^0.7.22"
jupyterlab = "^4.0.0"
ipykernel = "^6.23.1"
jupyter = "^1.0.0"
pyriksprot-tagger = "^2023.4.4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
pytest = "^7.4.0"
black = "^23.7.0"

[tool.black]
line-length = 120
skip_string_normalization = true
target-version = ["py39"]
skip-string-normalization = true

[tool.pylint.format]
max-line-length = 120

[tool.pylint.message_control]
disable = [
    "too-many-arguments",
    "invalid-name",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-branches",
    "line-too-long",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-timeout"
]

[tool.pylint.master]
max-line-length = 120

ignore-paths = ["data/"]


[build-system]
requires = ["setuptools", "poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"